--- a/src/config/simulator/sumo.yaml
+++ b/src/config/simulator/sumo.yaml
@@ -1,5 +1,9 @@
 name: sumo
 
+sumocfg_file: "dua_meso.static.sumocfg"  # Define the SUMO configuration file
+
+net_file: "input/lust_meso.net.xml" # Define the city network file
+
 seed: 10  # Random seed (default: 10)
 
 demand_ratio: 0.8  # Demand ratio (default: 0.8)
@@ -26,6 +30,8 @@ random_od: false  # Demand aggregated in the centers of the regions (default: Fa
 
 acc_init: 90  # Initial number of taxis per region (default: 90)
 
-city: "nyc_brooklyn"  # Defines city to train on
+city: "lux"  # Defines city to train on
 
 max_steps: 120  # Number of steps per episode (default: T=120)
+
+cplexpath: "/home/csasc/opt/opl/bin/x86-64_linux/"  # Defines directory of the CPLEX installation
