--- a/src/config/model/sac.yaml
+++ b/src/config/model/sac.yaml
@@ -31,3 +31,5 @@ rew_scale: 0.01  # Defines reward scale
 use_LSTM: false  # Use LSTM in the model
 
 input_size: 13 # Number of node features
+
+test_episodes: 10 # Number of episodes to test agent
